Thu Mar 18 20:36:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (rb_vmptr_init_options): moved from mvm.c and fixed
	  allocation size.

Thu Mar 18 20:34:54 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (vm_init2): initialize living_threads here.

Thu Mar 18 18:16:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (ruby_vm_spawn): unlock vm for spawned thread.

Thu Mar 18 18:13:21 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mvm.c (vm_init_options), ruby.c (rb_vm_options_init): properly
	  initialize rb_vm_options.

Thu Mar 18 15:29:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (ruby_vm_spawn): tentative implementation.

Thu Mar 18 14:54:24 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (ruby_vmptr_start): renamed from ruby_vm_start.

Thu Mar 18 13:21:56 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (InitVM_native_thread), vm.c (vm_thread_new):
	  fixed setting current native thread.

Thu Mar 18 10:20:50 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (ruby_threadptr_create): do not lock VM before new
	  thread is created.

Thu Mar 18 04:30:08 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (ruby_threadptr_cleanup): do not unlock VM.

	* vm.c (vm_init2): lock VM at first.

	* vm.c (ruby_set_vm_context, ruby_reset_vm_context): maintain
	  global VM lock.

Thu Mar 18 03:47:12 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (ruby_threadptr_init): added prototype.

Tue Feb 16 09:35:18 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mvm.c (ruby_vm_init_add_{library,library_path,initializer}):
	  implemented.

	* mvm.c (ruby_vm_init_{verbose,debug,stdin,stdout,stderr}): ditto.

	* io.c (InitVM_IO), ruby.c (ruby_vm_process_options): initialize with
	  init_options if set.

	* vm_core.h (struct rb_vm_options): moved cmdline_options from ruby.c.

	* vm_core.h (rb_vm_t): added init_options.

Sat Feb 13 13:16:35 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
