@@ -1,3 +1,15 @@
+Mon Nov  1 21:25:57 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* main.c: <stdlib.h> is needed, to introduce the getenv(3)
+          prototype declaration.  Without it a C compiler shall infer
+          the getenv type as "int getenv(...);", but this is totally
+          wrong, especially when your machine's sizeof(int) and
+          sizeof(char*) differs.  On such environment a return value
+          of getenv(3), which is in fact a char*, might first casted
+          into a int (loses data here), and then casted back to char*
+          by automatic integral promotion fo fit to the prototype of
+          ruby_set_debug_option().
+
 Thu Mar 18 20:36:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ruby.c (rb_vmptr_init_options): moved from mvm.c and fixed
